# src/docs/swagger.json
@@ -45,25 +45,25 @@
                 ],
                 "responses": {
                     "201": {
-                        "description": "Created",
+                        "description": "Group created successfully",
                         "schema": {
                             "$ref": "#/definitions/dto.GroupResponse"
                         }
                     },
                     "400": {
-                        "description": "Bad Request",
+                        "description": "Invalid request",
                         "schema": {
                             "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     },
                     "422": {
-                        "description": "Unprocessable Entity",
+                        "description": "Group info validation failed",
                         "schema": {
                             "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     },
                     "500": {
-                        "description": "Internal Server Error",
+                        "description": "Failed to create group",
                         "schema": {
                             "$ref": "#/definitions/dto.ErrorResponse"
                         }
@@ -94,6 +94,12 @@
                         "name": "groupIdOrCode",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "Include Users",
+                        "name": "includeUsers",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -104,19 +110,19 @@
                         }
                     },
                     "400": {
-                        "description": "Bad Request",
+                        "description": "Invalid request",
                         "schema": {
                             "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     },
                     "404": {
-                        "description": "Not Found",
+                        "description": "Group not found",
                         "schema": {
                             "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     },
                     "500": {
-                        "description": "Internal Server Error",
+                        "description": "Failed to get group",
                         "schema": {
                             "$ref": "#/definitions/dto.ErrorResponse"
                         }
@@ -161,31 +167,31 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "Group updated successfully",
                         "schema": {
                             "$ref": "#/definitions/dto.GroupResponse"
                         }
                     },
                     "400": {
-                        "description": "Bad Request",
+                        "description": "Invalid request",
                         "schema": {
                             "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     },
                     "404": {
-                        "description": "Not Found",
+                        "description": "Group not found",
                         "schema": {
                             "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     },
                     "422": {
-                        "description": "Unprocessable Entity",
+                        "description": "Group info validation failed",
                         "schema": {
                             "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     },
                     "500": {
-                        "description": "Internal Server Error",
+                        "description": "Failed to update group",
                         "schema": {
                             "$ref": "#/definitions/dto.ErrorResponse"
                         }
@@ -235,19 +241,19 @@
                         }
                     },
                     "400": {
-                        "description": "Bad Request",
+                        "description": "Invalid request",
                         "schema": {
                             "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     },
                     "404": {
-                        "description": "Not Found",
+                        "description": "Group not found",
                         "schema": {
                             "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     },
                     "500": {
-                        "description": "Internal Server Error",
+                        "description": "Failed to join group",
                         "schema": {
                             "$ref": "#/definitions/dto.ErrorResponse"
                         }
@@ -286,19 +292,19 @@
                         }
                     },
                     "400": {
-                        "description": "Bad Request",
+                        "description": "Invalid request",
                         "schema": {
                             "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     },
                     "404": {
-                        "description": "Not Found",
+                        "description": "Group not found",
                         "schema": {
                             "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     },
                     "500": {
-                        "description": "Internal Server Error",
+                        "description": "Failed to leave group",
                         "schema": {
                             "$ref": "#/definitions/dto.ErrorResponse"
                         }
@@ -333,19 +339,19 @@
                 ],
                 "responses": {
                     "201": {
-                        "description": "Created",
+                        "description": "User created successfully",
                         "schema": {
                             "$ref": "#/definitions/dto.UserResponse"
                         }
                     },
                     "400": {
-                        "description": "Bad Request",
+                        "description": "Invalid request",
                         "schema": {
                             "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     },
                     "409": {
-                        "description": "Conflict",
+                        "description": "Username already exists",
                         "schema": {
                             "$ref": "#/definitions/dto.ErrorResponse"
                         }
@@ -448,7 +454,7 @@
                 ],
                 "responses": {
                     "201": {
-                        "description": "Created",
+                        "description": "User added to waitlist successfully",
                         "schema": {
                             "$ref": "#/definitions/dto.WaitlistSignupResponse"
                         }
@@ -498,6 +504,21 @@
             "x-enum-varnames": [
                 "GroupUserAdmin",
                 "GroupUserMember"
+            ]
+        },
+        "config.PlaceType": {
+            "type": "string",
+            "enum": [
+                "restaurant",
+                "bar",
+                "cafe",
+                "park"
+            ],
+            "x-enum-varnames": [
+                "PlaceTypeRestaurant",
+                "PlaceTypeBar",
+                "PlaceTypeCafe",
+                "PlaceTypePark"
             ]
         },
         "dto.CreateGroupRequest": {
@@ -554,6 +575,41 @@
                 }
             }
         },
+        "dto.GroupPlaceResponse": {
+            "type": "object",
+            "properties": {
+                "address": {
+                    "type": "string"
+                },
+                "group_id": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "latitude": {
+                    "type": "number"
+                },
+                "longitude": {
+                    "type": "number"
+                },
+                "map_uri": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "place_id": {
+                    "type": "string"
+                },
+                "rating": {
+                    "type": "number"
+                },
+                "type": {
+                    "$ref": "#/definitions/config.PlaceType"
+                }
+            }
+        },
         "dto.GroupResponse": {
             "type": "object",
             "properties": {
@@ -561,10 +617,16 @@
                     "type": "string"
                 },
                 "creator_id": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "id": {
                     "type": "string"
+                },
+                "members": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.GroupUserResponse"
+                    }
                 },
                 "midpoint_latitude": {
                     "type": "number"
@@ -574,6 +636,12 @@
                 },
                 "name": {
                     "type": "string"
+                },
+                "places": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.GroupPlaceResponse"
+                    }
                 },
                 "radius": {
                     "type": "integer"
@@ -614,7 +682,7 @@
                     "$ref": "#/definitions/config.GroupUserRole"
                 },
                 "user_id": {
-                    "type": "string"
+                    "type": "integer"
                 }
             }
         },
@@ -675,7 +743,7 @@
             "type": "object",
             "properties": {
                 "id": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "location": {
                     "$ref": "#/definitions/dto.Location"
